# application

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pathconfig.inl
shaders/: fragment.slang  gradient.slang  vertex.slang
src/: main.cpp  pch.hpp
src/core/: application.cpp  application.hpp  events.hpp  input.cpp  input.hpp  keycodes.hpp  types.hpp  window.cpp  window.hpp
src/platform/: vma_impl.cpp
src/renderer/: camera.cpp  camera.hpp  deletion_queue.cpp  deletion_queue.hpp  mesh.hpp  renderer.cpp  renderer.hpp
src/renderer/rhi/: barrier.cpp  barrier.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  semaphores.cpp  semaphores.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vktypes.hpp
